--- a/src/views/partials/destacados.ejs
+++ b/src/views/partials/destacados.ejs
@@ -5,17 +5,116 @@
   <i class="fas fa-chevron-double-down"></i>
 </div>
 
-<div class="container-box">
+<div class="container-box-principal">
   <div class="box card-1">
-    <div class="icons-stars">
-      <i class="fas fa-star"></i>
-      <i class="fas fa-star"></i>
-      <i class="fas fa-star"></i>
-    </div>
-    <div class="container">
-      <div class="card">
-        <button href="#" class="btn-off">25% off</button>
+    <div class="box-stars">
+      <div class="icons-stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
       </div>
+    </div>
+    <div class="box-oferta">
+      <p>
+        <a href="" class="btn-off">25%</a>
+      </p>
+    </div>
+
+    <div class="box-img">
+      <img
+        src="images/D.mochila-barbie.png"
+        alt="imagen mochila Barbie"
+        class="img1"
+      />
+    </div>
+
+    <div class="box-text">
+      <p class="">Mochila barbie escolar espalda 12 años</p>
+    </div>
+    <div class="box-text">
+      <h3 class="">Antes $ 20,99</h3>
+    </div>
+    <div class="box-text">
+      <h2 class="">$ 14,99</h2>
+    </div>
+    <div class="box-button">
+      <p>
+        <a href="#" class="btn-carrito"
+          ><i class="fas fa-shopping-cart"></i>Añadir</a
+        >
+      </p>
+    </div>
+  </div>
+
+  <div class="box card-1">
+    <div class="box-stars">
+      <div class="icons-stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+      </div>
+    </div>
+    <div class="box-oferta">
+      <p>
+        <a href="" class="btn-off">15%</a>
+      </p>
+    </div>
+
+    <div class="box-img">
+      <img src="images/D.spiderman.png" alt="imagen spiderman " class="img1" />
+    </div>
+
+    <div class="box-text">
+      <p class="">Spiderman Titan Hero power FX</p>
+    </div>
+    <div class="box-text">
+      <h3 class="">Antes $ 30,99</h3>
+    </div>
+    <div class="box-text">
+      <h2 class="">$ 23,99</h2>
+    </div>
+    <div class="box-button">
+      <p>
+        <a href="#" class="btn-carrito"
+          ><i class="fas fa-shopping-cart"></i>Añadir</a
+        >
+      </p>
+    </div>
+  </div>
+
+  <div class="box card-1">
+    <div class="box-stars">
+      <div class="icons-stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+      </div>
+    </div>
+    <div class="box-oferta">
+      <p>
+        <a href="" class="btn-off">30%</a>
+      </p>
+    </div>
+
+    <div class="box-img">
+      <img src="images/D.lego-duplo.png" alt="imagen lego duplo" class="img1" />
+    </div>
+
+    <div class="box-text">
+      <p class="">Lego duplo Frozen 2 años +</p>
+    </div>
+    <div class="box-text">
+      <h3 class="">Antes $ 60,99</h3>
+    </div>
+    <div class="box-text">
+      <h2 class="">$ 49,99</h2>
+    </div>
+    <div class="box-button">
+      <p>
+        <a href="#" class="btn-carrito"
+          ><i class="fas fa-shopping-cart"></i>Añadir</a
+        >
+      </p>
     </div>
   </div>
 </div>
