--- a/public/stylesheets/productDetail.css
+++ b/public/stylesheets/productDetail.css
@@ -1,338 +1,80 @@
-*{
-    margin: 10px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-
-body{
-    font-family: 'Delius Unicase', cursive;
-    background-color: #ffffff;
-}
-/***INICIO Barra cabecera********/
-.container-header{
-    background-color:#CDABED;
-    width: auto;
-    height: 40px;
-    display: flex;
-    justify-content: space-between
-}
-.container-header .info {
-    color: white;
-    font-size: 12px; 
-    margin: 0px 30px;
-    padding: 5px;
-    justify-content: flex-start;
-}
-.container-header
-.button-header {
-    display: inline-flex;
-    margin-top: -5px;
-}
-.btn-ingresar,
-.btn-registrarse {
-    background-color:rgb(14, 108, 239);
-    color: white;
-    font-family: 'Delius Unicase';
-    font-size: 12px;
-    width: 120px;
-    height: 30px;
-    border: none;
-    border-radius: 5px;
-    text-align: center;
-}
-.btn-ingresar {
-    background-color:#CDABED;
-    color: black;
-    border: solid rgb(232, 231, 231);
-}
-/***FIN Barra cabecera********/
-
-/***INICIO Logo, buscador y carrito********/
-.container-main {
-    display: flex; 
-    justify-content: space-between;
-}
-.logo {
-    margin-top: 10px;
-    margin-left: 100px;
-}
-.container-carrito {
-  display: flex; 
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  width: 400px;
-}
-.container-main .buscar-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;  
-}
-.container-main .buscador-box {
-    width: 30rem;
-    height: 2rem;
-    border-radius: 5px;
-    border: solid 1px #CDABED;
-    text-align: center;
-}
-.container-main #lupa {
-    width: 2rem;
-    height: 2rem;
-    color: #CDABED;
-    border: solid 1px #CDABED;
-    border-radius: 5px;
-    font-size:20px;
-}
-.container-carrito #icono-carrito {
-    display: flex;
-    font-size: 25px; 
-    color: #CDABED;
-    margin-top: 17px; 
-}
-.carro {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-.carro .box-carrito {
-    border: solid 0.5px #CDABED;
-    border-radius: 10px;
-    background-color: rgb(240, 239, 239);
-    width: 50px;
-    height: 30px;
-    margin-top: 0px;
-}
-
-/***FIN Logo, buscador y carrito********/
-
-/***INICIO Menu********/
-.main-navbar {
-    display:flex;
-    justify-content: flex-start;
-    margin: 10px;
-}
-.main-navbar a{
-    text-decoration:  none;
-    color: #222222;
-    display: inline-block;
-    padding: 2px 0;
-    font-size: 13px;
-}
-.main-navbar ul {
-    display:flex;
-}
-.main-navbar li {
-    margin: 0px 5px;
-    margin-left: 30px;
-    list-style: none;
-}
-.main-navbar li>a:hover {
-   color: blue;
-   background-color:#eaeaea; 
-
-}
-/***FIN Menu********/
-
-/***INICIO Slide********/
-.slide-container {
-    width: 100%;
-    height: 400px;
-    background-color: #e1e1e1;
-    border-radius: 10px;
-}
-/***FIN Slide********/
-
 /** INICIO Detalle de Producto**/
 
-.container-detalle {
+*{
+    padding: 0;
+}
+
+.container-detalle img{
+    display:flex;
+    width: 400px;
+    margin-left: 20%;
+    margin-bottom: 10%;
+    align-content: center;        
+}
+
+.cont-detalle-imagen{
+    width: 500px;
+    margin-left: 55%;
+    margin-top: -35%;
+    align-content: flex-start;
+}
+
+.cont-detalle-imagen h2{
+    margin-left: -1%;
+}
+
+.cont-precio{
+    font-size: 20px;
     display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    font-size: 80%;
-    }
-
-.container-detalle .imagen {
-    width: 40%;
-    height: 40%;
+    width: 100px;
+    height: 30px;
+    align-content: center;
+    margin-left: -1%;
 }
 
-.detalle {
-    width: 60%;
-    height: 40%;
-    margin-left: -10%;
+label {
+    display:flex;
+    font: 1rem 'Delius Unicase', cursive;
 }
 
-.container-detalle input {
-    width: 10%;
+input,
+label {
+    margin: .4rem 0;
+    margin-left: -1%;
+}
+
+.cont-boton-agregar{
+    background-color: #5AAA95;
+    font: 'Delius Unicase', cursive;
+}
+
+.cont-nav-detalle{
+    margin-left: 53%;
+    margin-top: -1%;
+    display:flex;
+    justify-content: flex-start;
+    align-content: flex-start;
+}
+
+.cont-nav-detalle ul>li{
+    width: 100px;
     height: 20px;
-    color: #2a2d43;  
-}
-
-.container-detalle .metodos-aceptados ul>li{
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-    text-decoration: none;
     list-style: none;
-    color: #9b57db;
-    font-size: 50px;
-}
-
-.orden-metodos {
-    display: flex;
-}
-
-
-
-/***INICIO productos Destacados********/
-/***INICIO productos Destacados********/
-.destacados {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
-    margin-top: 50px;
-    
-}
-.destacados .destacados-box1 {
-    background-color: white;
-    width:100%;
-    height: 200px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    
-}
-.destacados .destacados-box1 img {
-    width: 200px;
-    height: 200px;
-    object-fit: contain;
-    margin: 10px;
-    margin-left: 30px;
-
-}
-
-
-.slide-container h1{
-    text-align: center;
-}
-.info-destacados h3{
-    text-align: center;
-    margin-top: 20px;
-}
-/***FIN productos Destacados********/
-
-/***INICIO nuestras marcas********/
-#marcas h3{
-    text-align: center;
-     margin-top: 90px;
- }
- .slider{
-     background-color:#ccc9ce;
-     width: auto;
-     height: 140px;
-     margin: auto;
-     margin-top: 40px;
-     margin-left: 5px;
-     overflow: hidden;
-     border-radius: 5px;
- }
- 
- @keyframes cambio {
-     0% {margin-left: 0;}
-     20% {margin-left: 0;}
- 
-     25% {margin-left: -100%;}
-     45% {margin-left: -100%;}
- 
-     50% {margin-left: -200%;}
-     70% {margin-left: -200%;}
- 
- }
- 
- .slider ul{
-     display:flex;
-     padding: 0;
-     width: 300%;
-     animation:  cambio 20s infinite alternate;
-    
- }
- 
- .slider li{
-     list-style: none;
-     width: 100%;
-     
- }
- 
- .images_slider{
- 
-     width: 200px ;
-     height: 100px;
-     object-fit: contain;
-     margin-top: 10px;
- }
- 
- 
- .slider img{
- width: 30%;
- 
- }
- 
-
-/***INICIO Footer********/
-.footer-box {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    width: 100%;
-    height: 300px;
-    background-color: #CDABED;
-    margin-top: 40px;
-}
-.footer-box h3 {
-    text-align: start;
-    margin: 20px;
-    margin-left: 20px;
-}
-.footer-box .contacto ul>li{
-    flex-direction: column;
     text-decoration: none;
-    list-style: none;
-    color: white;
+    display:inline-block;
+    flex-direction:row;
+    justify-content:flex-start;
+    align-content: center;
+    margin-left: 3px;
 }
-.footer-box .informacion ul>li{
-    flex-direction: column;
-    text-decoration: none;
-    list-style: none;
-    color: white;
-}
-.footer-box .informacion a {
-    text-decoration: none;
-    color: white;
-}
-.footer-box .informacion li>a:hover {
-    color: black;
-    background-color: #ffffff;
-}
-.footer-box .pagos ul>li{
-    flex-direction: row;
-    justify-content:space-around;
-    text-decoration: none;
-    list-style: none;
-    color: white;
-}
-.footer-box .pagos i{
+
+.cont-descripcion{
+    width: 450px;
+    height: 100px;
     display: flex;
-    font-size: 32px;
+    margin-left: 54%;
+    margin-top: -2%;
+    margin-bottom: 10%;
+    align-content: center;
+
 }
-.footer-box .mapa-box {
-    width: 360px;
-    height:250px;
-    border: solid 1px #393939;
-}
-.footer-box .mapa-box iframe {
-    width: 360px;
-    height:250px;
-    margin: 0;
-}
-/***FIN Footer********/
