--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -1,110 +1,81 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <%- include('../partials/head') %>
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/productDetail.css">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="/stylesheets/styles.css" />
+    <link rel="stylesheet" href="/stylesheets/productDetail.css" />
 
+    <title>Detalle de producto</title>
+  </head>
 
-
-    <title>Playground-Jugueteria</title>
-</head>
-<body>
-    <!--Cabecera del sitio-->
-
-    <%- include('../partials/header') %>
-
-    <!--Logo, buscador y carrito de compras-->
-    <main class="container-main">
-        
-            <a href="/">
-                <img src="/images/Design/Logo.png"  alt="Logo Playground Jugueteria"></img>
-            </a>
-     
-        <div class="buscar-wrapper">
-            <input class="buscador-box" type="search" text="Search" placeholder="Buscar producto">
-            <button type="button" class="fas fa-search" id="lupa"></button>
-        </div>
-        <div class="container-carrito">
-            <div class="carro">
-                <a href="/productDetail">
-                    <i class="fas fa-shopping-cart" id="icono-carrito">
-                        <div class="box-carrito"></div>
-                    </i>
-                </a>
-            </div>
-        </div>
-    </main>
-    <!--Menú-->
-    <nav class="main-navbar">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Marcas</a></li>
-            <li><a href="#">Edades</a></li>
-            <li><a href="#">Contacto</a></li>
-        </ul>
-    </nav>
+  <body>
+    <%- include('../partials/navbar.ejs')%>
     <!--Detalle de Producto seccion-->
+    <!--Imagen del producto-->
     <div class="container-detalle">
-        <div class="imagen">
-            <img src="/images/muneca.jpg"  alt="muneca"></img></div>
-            <div class="detalle">
-                <h2>Muñeca con asiento de auto</h2>
-                <p>Código: 001</p>
-                <p>Descripción: Muñeca con asiento de auto con accesorios de juguete. 
-                    Incluye sonajero, babero y 2 mamaderas.</p>
-                <p>Medidas: 7cm x 15cm x 14cm</p>
-                <p>Peso: 480 gr</p>
-                <p>Precio: $5.400,00</p>
-                <p>Stock: SI</p>
-                
-                <h4 class="boton agregar"><input type="number" name=numero><input class="#" type="button" value="Agregar"/></h4>
-                <h4 class="boton-guardar">
-                    <input class="botones" type="button" value="Guardar"/>
-                    <div class="metodos-aceptados">
-                        <h4>Métodos aceptados</h4>
-                            <ul class="orden-metodos">
-                                <li><i class="fas fa-money-bill-wave"></i></li>
-                                <li><i class="fab fa-cc-visa"></i></li>
-                                <li><i class="fab fa-cc-mastercard"></i></li>
-                                <li><i class="fab fa-cc-paypal"></i></li>
-                            </ul>
-                    </div>
-             </div>
-        </div>
+      <img src="/images/muneca.jpg" alt="muneca" />
     </div>
-    <div class="info-destacados">
-        <h3>
-            PRODUCTOS DESTACADOS
-        </h3>
-    </div>
-    <!--Productos Destacados-->
-    <section class="destacados">
-        <div class="destacados-box1">
-            <img src="/images/destacado-frozen.jpeg" alt="Imagen frozen">
-            <img src="/images/destacado-toyStory.jpeg" alt="Imagen toyStory">
-            <img src="/images/destacado-spiderman.jpeg" alt="Imagen spiderman">
-            <img src="/images/destacado-superman.jpeg" alt="Imagen superman">
-            <img src="/images/destacado-starwars.jpeg" alt="Imagen star">
-            <a href="/productDetail">
-                <img src="/images/muneca.jpg" alt="Imagen mariobros">
-            </a>
-            
-        </div>
-        <div class="destacados-box2">
-            
-        </div>
-    </section>
-    <!--Nuestras Marcas-->
-    <section id="marcas">
-        <h3>
-            NUESTRAS MARCAS
-        </h3>
-    
+    <!--Título y Precio-->
+    <!-- <div class="cont-detalle-imagen">
+      <h2>Muñeca con Asiento de Auto</h2>
+      <p class="cont-precio">$58,99</p> -->
+    <!--Botones-->
+    <!-- <label for="cont-boton-suma">Cantidad:</label>
 
-    </section>
-      <!--Footer-->
-      <%- include('../partials/footer') %>
-      
-</body>
+      <input
+        type="number"
+        id="cont-boton-suma"
+        name="cont-boton-suma"
+        min="1"
+        max="100"
+      />
+      <input
+        class="cont-boton-agregar"
+        type="button"
+        onclick="alert('Agregado!')"
+        value="Agregar al carrito"
+      />
+    </div> -->
+    <!--Descripcion y Navegador-->
+
+    <!-- <nav class="cont-nav-detalle">
+      <ul>
+        <li><a href="#">Descripción</a></li>
+        <li><a href="#">Edad</a></li>
+        <li><a href="#">Habilidad</a></li>
+        <li><a href="#">Tamaño</a></li>
+      </ul>
+    </nav> -->
+    <!-- <div class="cont-descripcion">
+      <p>
+        Muñeca con asiento de auto y accesorios de juguete. Ideal para que tus
+        pequeños disfruten de los mejores paseos. Incluye sonajero, babero y 2
+        mamaderas.
+      </p>
+    </div> -->
+
+    <!--Fin Detalle de Producto-->
+
+    <!--Productos Destacados-->
+    <!-- <section class="destacados">
+      <div class="destacados-box1">
+        <img src="/images/destacado-frozen.jpeg" alt="Imagen frozen" />
+        <img src="/images/destacado-toyStory.jpeg" alt="Imagen toyStory" />
+        <img src="/images/destacado-spiderman.jpeg" alt="Imagen spiderman" />
+        <img src="/images/destacado-superman.jpeg" alt="Imagen superman" />
+        <img src="/images/destacado-starwars.jpeg" alt="Imagen star" />
+        <a href="/productDetail">
+          <img src="/images/muneca.jpg" alt="Imagen mariobros" />
+        </a>
+      </div>
+    </section> -->
+  </body>
 </html>
