subida commits anteriores

--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/head') %>
     <link rel="stylesheet" href="/stylesheets/productCart.css">
 
-    <title>Playground-Jugueteria</title>
+    <title></title>
 </head>
 <body>
     <!--Cabecera del sitio-->
