--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -69,6 +69,7 @@
           <ul class="">
             <li class=""><button class="btn-menu" onclick="location.href='/products/create'">Nuevo producto</button></li>
             <li class=""><button class="btn-menu" onclick="location.href='/products'">Lista de producto</button></li>
+            <li class=""><button class="btn-menu" onclick="location.href='/users'">Lista de usuarios</button></li>
           </ul>
         <% } %> 
     </div>
