--- a/src/views/users/usersEdit.ejs
+++ b/src/views/users/usersEdit.ejs
@@ -10,6 +10,8 @@
 </head>
 <body>
     <%- include('../partials/navbar.ejs') %>
+
+<form class="forms" action="/users/edit/<%= userToEdit.id %>?_method=PATCH" method="POST" enctype="multipart/form-data">
 <div class="card">
      <div class="container-profile">
 
@@ -21,50 +23,36 @@
        
         <div class="grid">
             <div class="form-group a">
-                <label for="name">Nombre</label>
-                <h2 class=""><%= userLocal.first_name%></h2>
-                
+                <label for="first_name">Nombre</label>
+                <input id="first_name" class="text" type="text" name="first_name" value=<%= userToEdit.first_name %> required> 
             </div>
     
             <div class="form-group b">
-                <label for="first-name">Apellidos</label>
-                <h2 class=""><%= userLocal.last_name%></h2>
+                <label for="last_name">Apellido</label>
+                 <input id="last_name" class="text" type="text" name="last_name" value=<%=userToEdit.last_name  %> required> 
             </div>
     
             <div class="form-group email-group">
-                <label for="email">Email</label>
-                <h2 class=""><%= userLocal.email%></h2>
+                <label for="email">E-mail</label>
+                <input id="email" class="text" type="email" name="email" value=<%= userToEdit.email  %> required>
             </div>
     
-            <!-- 
-            <div class="textarea-group">
-                <label for="bio">Bio</label>
-                <textarea id="bio"></textarea>
-            </div>
-    
-            <div class="form-group">
-                <label for="address">Dirección</label>
-                <input id="address" type="text">
+            <div class="form-group phone-group">
+                <label for="password">Contraseña</label>
+                <input id="password" class="text" type="password" name="password" required>
             </div>
     
             <div class="form-group">
-                <label for="city">Número</label>
-                <input id="city" type="text">
+                <label for="imagenUsuario">Imagen de perfil</label>
+                <input type="file" name="imagenUsuario" id="imagenUsuario">
             </div>
-    
-            <div class="form-group">
-                <label for="zip">Código postal</label>
-                <input id="zip" type="text">
-            </div> -->
         </div>
-            <div class="button-container">
+        <div class="button-container">
             <button class="button">Actualizar</button>
         </div>
     </div>
 
 </div>
+</form>
 </body>
 </html>
-
-<!--Trae datos del usuario registrado-->
-
